initial implementation of app integration test
